# mikrorechner

./: .travis.yml  Cargo.toml  README.md  test.img
Assembler/: asem.py  asm.py  asm_io.py  asm_labels.py  asm_vars.py  datastrings.py  euklid.txt  euklid_working.txt  extract_byte.txt  fibonacci.txt  fibonacci_ls.txt  fibonacci_working.txt  immediates.py  labels.py  opcodes.py  registers.py  trim.py
Assembler_neu/: assemble.py  commands_to_binary_string.py  exceptions.py
Hardware/: alu.vhd  alu_delay_reg.vhd  cpu.vhd  data_mem.hex  data_memory.vhd  decoder.vhd  delay_reg.vhd  delay_reg1.vhd  delay_reg2.vhd  executer.vhd  exmem_delay_reg.vhd  fetcher.vhd  instruction_mem.hex  instruction_memory.vhd  mem_access.vhd  mux1.vhd  mux32.vhd  mux32OUT.vhd  pc.vhd  pipe_ex_mem.vhd  pipe_id_ex.vhd  pipe_if_id.vhd  pipe_mem_wb.vhd  piped_alu.vhd  piped_cpu.vhd  piped_executer.vhd  reg_write_back.vhd  registerbank.vhd  test fibonacci.txt  test_alu.vhd  (+10 more)
cmlc/: Cargo.toml  README.md  language-configuration.json  package.json  todo.md
cmlc/grammars/: cml.tmLanguage.json
cmlc/src/: ast.rs  codegen.rs  emit.rs  lexer.rs  main.rs  parser.rs  span.rs  support.rs  typecheck.rs
cmlc/src/codegen/: layout.rs
cmlc/src/typecheck/: lint.rs  scope_map.rs  type_env.rs  unify.rs
cmlc/tests/: factorial.cml  faculty.cml  find.cml  pow.cml  syntax.cml  vector.cml
simulator/: Cargo.toml  README.md
simulator/examples/: test.txt.img
simulator/src/: asm.rs  main.rs  memory.rs  simulation.rs  simulator.rs  support.rs  vm.rs
simulator/tests/: divide_by_zero.img.txt  overflows.img.txt
(+15 files in other folders)
