[package]
name = "cmlc"
version = "0.3.0"
authors = ["Robin Mirow <robinmirow@live.com>"]
edition = "2018"

[dependencies]
codespan = "0.2.0"
fnv = "1.0.6"
codespan-reporting = "0.2.0"
structopt = "0.2.14"
derive_more = "0.13.0"
strum = "0.13.0"
strum_macros = "0.13.0"
byteorder = "1.3.0"
hex = "0.3.2"
