[package]
name = "simulator"
version = "0.8.0"
authors = ["Robin Mirow <robinmirow@live.com>"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
structopt = "0.2.13"
rand = "0.6.0"
num_enum = "0.1.1"
strum = "0.11.0"
strum_macros = "0.11.0"
log = "0.4.6"
env_logger = "0.6.0"
crossbeam-channel = "0.4.4"
linefeed = "0.5.4"
